documents/examples/bad/type_checking/auto2.latf
auto f(int x) {
    if (x > 0) {
        println("x is positive");
    }
    return lambda (int y) -> int {
        return x - y;
    };
}

int main() {
    auto g = f(-5);

    g = lambda (int ref z) -> int . z + 1; // error
    g = lambda (int z) -> bool . z > 0; // error
    g = lambda (int z, int y) -> int . z + y; // error
    g = lambda () -> int . 1; // error

    return 0;
}